2010-02-18  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php:  fix the date to save into DB.

2010-02-18  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/gis_maps/render_view.php: change to use new tables.

2010-02-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: check in the function "addPath" if the agent
	haven't history data. And clean source code.
	
	* operation/agentes/gis_view.php: change to use new tables, and show
	messages when the agent haven't data GIS.
	
	* godmode/agentes/agent_conf_gis.php: change the message for agent without
	data GIS.

2010-02-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: hightlight that the parameter $script in
	function print_input_text_extended isn't in use.
	
	* include/functions_gis.php: create function "getDataLastPositionAgent"
	that return row of position and other data for id agent.
	
	* godmode/agentes/agent_conf_gis.php: add the validate fields and adapt
	to new tables.
	
	* godmode/agentes/configurar_agente.php: adapt to new tables.

2010-02-17  Pablo de la Concepción <pablo.concepcion@artica.es>

	* pandoradb.sql, extras/pandoradb_migrate_v3.0_to_v3.1.sql: Modified data
	model using a new table tgis_data_status to save the current GIS data and
	the table tgis_data_history to store the historical GIS data. That also
	means that the GIS related fields from the table tagente are now in the
	table tgis_data_status. The foreign key in the table tgis_map_layer to
	tgrupo has been droped because now it's possible to have layers without
	group, just agents.

2010-02-17 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: add the parameter id layer in the function
	"makeLayer" for add the id layer (id of db) in the layer. Fill in the
	sourcecode  in the function "activateAjaxRefresh" that now show new
	agents in the map in real time and add make changes in this function.
	 