@@ -84,11 +84,12 @@ if ($layers != false) {
 				continue;
 			
 			$icon = get_agent_icon_map($idAgent, true);
+			$status = get_agent_status($idAgent);
 			
 			if ($show_history == 'y') { 	
 				addPath($layer['layer_name'], $idAgent);
 			}
-			addPoint($layer['layer_name'], $agentName, $coords['stored_latitude'], $coords['stored_longitude'], $icon, 20, 20, $idAgent, 'point_agent_info');
+			addPoint($layer['layer_name'], $agentName, $coords['stored_latitude'], $coords['stored_longitude'], $icon, 20, 20, $idAgent, $status, 'point_agent_info');
 		}
 	}
 	
