@@ -1,3 +1,15 @@
+2010-02-19  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/functions_gis.php: adapt to new tables.
+	
+	* include/javascript/openlayers.pandora.js
+	
+	* operation/gis_maps/render_view.php: adapt to new tables.
+	
+	* operation/gis_maps/ajax.php: adapt to new tables.
+	
+	* operation/agentes/gis_view.php: clean source code.
+
 2010-02-18  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* godmode/agentes/configurar_agente.php:  fix the date to save into DB.
